YAML/04-people-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
    app.quarkus.io/build-timestamp: '2021-10-07 - 13:46:11 +0000'
    app.quarkus.io/commit-id: c62e365964e66e336b0de3b94fd05fa11d0aab6f
    app.quarkus.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
  name: people
  labels:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 0
      maxSurge: 2
  replicas: 4
  selector:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      labels:
        app.kubernetes.io/name: people
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
      annotations:
        app.openshift.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
        app.quarkus.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: people
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            dyangcht/qa
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  replicas: 4
