YAML/people-dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
    app.quarkus.io/build-timestamp: '2021-10-07 - 13:46:11 +0000'
    app.quarkus.io/commit-id: c62e365964e66e336b0de3b94fd05fa11d0aab6f
    app.quarkus.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
  name: people
  labels:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - people
        from:
          kind: ImageStreamTag
          namespace: demo
          name: 'people:1.0-SNAPSHOT'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/demo/people@sha256:d2d96a02ccc94b929646ae87582c7c44ab5bd1e0c9c3a85fe3964a2aa613b651
  replicas: 4
  selector:
    app.kubernetes.io/name: people
    app.kubernetes.io/version: 1.0-SNAPSHOT
  template:
    metadata:
      labels:
        app.kubernetes.io/name: people
        app.kubernetes.io/version: 1.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
      annotations:
        app.openshift.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
        app.quarkus.io/build-timestamp: '2021-10-07 - 13:46:11 +0000'
        app.quarkus.io/commit-id: c62e365964e66e336b0de3b94fd05fa11d0aab6f
        app.quarkus.io/vcs-url: 'https://github.com/dyangcht/query-labs.git'
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: people
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            timeoutSeconds: 10
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: >-
            image-registry.openshift-image-registry.svc:5000/demo/people@sha256:d2d96a02ccc94b929646ae87582c7c44ab5bd1e0c9c3a85fe3964a2aa613b651
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  replicas: 4
