YAML/ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-boot-ui
  namespace: demo
  uid: 75ac3f19-c27c-4de1-b1af-7b695ce8c10e
  resourceVersion: '48713'
  creationTimestamp: '2021-10-07T13:57:24Z'
  labels:
    app: spring-boot-ui
    app.kubernetes.io/component: spring-boot-ui
    app.kubernetes.io/instance: spring-boot-ui
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: kubectl-expose
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-10-07T13:57:24Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2021-10-07T13:57:24Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
spec:
  host: spring-boot-ui-demo.apps.cluster-2f87.2f87.sandbox1328.opentlc.com
  to:
    kind: Service
    name: spring-boot-ui
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: spring-boot-ui-demo.apps.cluster-2f87.2f87.sandbox1328.opentlc.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2021-10-07T13:57:24Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.cluster-2f87.2f87.sandbox1328.opentlc.com
